# FarmersMarketplace

./: .env.example  .eslintignore  .gitignore  .prettierignore  CONTRIBUTING.md  ERROR-BOUNDARY-IMPLEMENTATION.md  ERROR-BOUNDARY-SUMMARY.md  ERROR-BOUNDARY-TESTING.md  ORDERS-DASHBOARD.md  README.md  SECURITY-AUDIT.md  STOCK-RACE-CONDITION-FIX.md  STOCK-RACE-CONDITION-IMPLEMENTATION.md  TODO-idempotency.md  TODO-stellar.md  TODO.md  VALIDATION-TEST-PLAN.md  docker-compose.test.yml  docker-compose.yml  ecosystem.config.js
backend/: .env.example  .eslintignore  .eslintrc.json  AUTOMATIC_ORDER_PROCESSOR_IMPLEMENTATION.md  DELETE_WAITLIST_IMPLEMENTATION.md  TASKS_6.3_AND_6.4_IMPLEMENTATION.md  TASK_8.1_RESTOCK_ENDPOINT_IMPLEMENTATION.md  WAITLIST_ENDPOINT_IMPLEMENTATION.md  WAITLIST_VALIDATION_ENHANCEMENTS.md  demo-implementation.js  demo-restock-integration.js  demo-restock-simple.js  eslint.config.mjs  migrate.js  package-lock.json  package.json  temp_products.js  test-endpoints-manual.js  test-new-endpoints.js  test-restock-endpoint.js  verify-delete-endpoint.js
contract/: Cargo.toml  cli.sh  test-futurenet.sh  wasm-profile.sh
contracts/: Cargo.toml
contracts/creator-earnings/: Cargo.toml
contracts/creator-earnings/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  stream.rs  validate_id.rs
docs/: deployment.md
e2e/: auth.spec.ts  buyer.spec.ts  farmer.spec.ts  package-lock.json  package.json  playwright.config.ts
frontend/: .eslintrc.js  .eslintrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  (+1 more)
(+429 files in other folders)
